# asleh

./: .gitignore  LICENSE  README.md  devshell.nix  flake.nix  local.properties  settings.gradle.kts
.github/workflows/: release.yml  test.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/jossephus/asleh/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jossephus/asleh/: CalcScreen.kt  MainActivity.kt
app/src/main/java/com/jossephus/asleh/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jossephus/asleh/: ExampleUnitTest.kt
asleh-rs/: Cargo.toml  build.rs  devshell.nix  flake.nix
asleh-rs/.cargo/: config.toml
asleh-rs/src/: asleh.udl  lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
