[package]
name = "asleh-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "asleh"
crate-type = ["cdylib"]

[dependencies]
fend-core = "1.5.6"
rand = "0.9.1"
uniffi = { version = "0.29.3" }



[build-dependencies]
uniffi = { version = "0.29.3", features = [ "build" ] }


[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
