[package]
name = "asleh-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "asleh"
crate-type = ["cdylib"]

[dependencies]
fend-core = "1.5.6"
rand = "0.9.1"
uniffi = { version = "0.29.3" }
clap = { version = "4.5.41" }



[build-dependencies]
uniffi = { version = "0.29.3", features = [ "build" ] }


[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[profile.release]
lto = true
codegen-units = 1  # Reduces parallelism but enables better optimization
opt-level = "z"    # Optimize for size
strip = "symbols"  # Strip debug symbols (Rust 1.60+)
panic = "abort"

